--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "captcha-com/captcha",
-    "description": "Captcha Generator -- BotDetect PHP Captcha Free composer package.",
-    "keywords": ["captcha", "|captcha generator", "php captcha", "captcha library"],
+    "description": "Captcha Generator -- BotDetect PHP CAPTCHA Free composer package.",
+    "keywords": ["captcha", "captcha generator", "php captcha", "captcha library"],
     "homepage": "https://captcha.com/php-captcha.html",
     "license": "proprietary",
     "authors": [
